fixed box alignments

--- a/template.css
+++ b/template.css
@@ -352,16 +352,16 @@ span.ic {
 }
 #paperFooter {
     clear: both;
-    width: 980px;
+    width: auto;
     height: auto;
     padding-bottom: 15px;
 }
 #disclaimer {
-    width: 920px;
+    width: auto;
     background-color: #00477F;
     margin-left: auto;
     margin-right: auto;
-    padding: 40px 40px 15px;
+    padding: 10px;
 }
 #disclaimer p {
     text-align: center;
